--- a/index.html
+++ b/index.html
@@ -1,32 +1,60 @@
-<!DOCTYPE html>
-<html>
-<head>
-<script type="module"
-src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-</head>
+<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
-<body style="margin:0;">
-
-<model-viewer
-src="/ys6m.glb"
-ios-src="/ys6m.usdz"
-poster="/ys6m.png"
-alt="A test model"
-
-ar
-ar-modes="webxr scene-viewer quick-look"
-ar-scale="fixed"
-
-camera-controls
-auto-rotate
-
-environment-image="/studio.hdr"
-
-reveal="interaction"
-loading="lazy"
-
-style="width:100vw;height:100vh;">
+<model-viewer id="reveal"
+              src=“ys6m.glb”
+              ios-src="ys6m.usdz”
+              alt="A test model"
+              ar
+              ar-scale="fixed"
+              camera-controls
+	   environment-image="/studio.hdr"
+              style="width: 100%; height: 100%"
+              >
+  <button slot="ar-button" style="border:none; background:none; width: 0px; height:0px">
+  <img src=“/arlogo.png”
+       ios-src=“/arlogo.png”
+       alt="Submit" 
+       style="border-radius: 4px; border: none; width: 15%; position: absolute; top: 16px; right: 16px;">
+  </button>
+  <div id="lazy-load-poster" slot="poster"></div>
+  
 </model-viewer>
-
-</body>
-</html>
+ <style>
+   
+  model-viewer::part(default-progress-bar) {
+     background-color: grey;
+     height: 30px;
+     width: 75%;
+     margin-left: 10vw;
+     margin-top: 35vmax;
+   }
+   
+     model-viewer::part(default-progress-mask) {
+     background-color: black;
+     color: red;
+     height: 30px;
+     width: 75%;
+     margin-left: 10vw;
+     padding-right: 10h;
+     margin-top: 35vmax;
+   }
+   
+   
+   
+     #lazy-load-poster {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-image: url(“/“ys6m.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: transparent;
+    --webkit-filter: blur(4px);
+    filter: blur(4px);
+    
+  }
+   
+</style>
