--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
               style="width: 100%; height: 100%"
               >
   <button slot="ar-button" style="border:none; background:none; width: 0px; height:0px">
-  <img src=“/arlogo.png”
-       ios-src=“/arlogo.png”
+  <img src=“arlogo.png”
+       ios-src=“arlogo.png”
        alt="Submit" 
        style="border-radius: 4px; border: none; width: 15%; position: absolute; top: 16px; right: 16px;">
   </button>
@@ -47,7 +47,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background-image: url(“/“ys6m.png);
+    background-image: url(“ys6m.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
