--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
               ar
               ar-scale="fixed"
               camera-controls
-	   environment-image="/studio.hdr"
               style="width: 100%; height: 100%"
+			  environment-image="/studio.hdr"
               >
-  <button slot="ar-button" style="border:none; background:none; width: 0px; height:0px">
+  <button slot="ar-button">
   <img src=“arlogo.png”
        ios-src=“arlogo.png”
        alt="Submit" 
-       style="border-radius: 4px; border: none; width: 15%; position: absolute; top: 16px; right: 16px;">
   </button>
   <div id="lazy-load-poster" slot="poster"></div>
   
