--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <model-viewer
   src="/ys6m.glb"
-  ios-src="/ys6m.usdz"
+  ios-src="/ys6m.usdz#allowsContentScaling=0"
   poster="/ys6m.png"
   alt="A test model"
 
